<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ManifestConfirmationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvConfManif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirmation manifest"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lyArrDoor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilArrival"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColorHint="@color/primary_text">

                <EditText
                    android:id="@+id/tvArrival"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_arrival"
                    android:text="Truck name"
                    android:textColor="@color/secondary_text"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDoor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/primary_text">

                <EditText
                    android:id="@+id/tvDoor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_door"
                    android:text="001"
                    android:textColor="@color/secondary_text"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvShipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"
            android:text="Shipper"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilShipNname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/primary_text">

            <EditText
                android:id="@+id/tvShipNname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/hint_ship_nname"
                android:text="Shipper name"
                android:textColor="@color/secondary_text"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilLotNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColorHint="@color/primary_text">

                <EditText
                    android:id="@+id/tvLotNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_lot_num"
                    android:text="Lot #"
                    android:textColor="@color/secondary_text"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRef"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColorHint="@color/primary_text">

                <EditText
                    android:id="@+id/tvRef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:hint="@string/hint_ref"
                    android:text="@string/hint_ref"
                    android:textColor="@color/secondary_text"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="okClick"
            android:text="OK" />
    </LinearLayout>
</ScrollView>